Make jafar parser work on Java 8 as well (#20)